<resources>
    <string name="Transfer_detail">Transfer Details</string>
    <string name="_0_00">~ 00.00</string>
    <string name="_1_capital_character">1 capital character</string>
    <string name="_1_number">1 number</string>
    <string name="_1_special_character">1 special character</string>
    <string name="_2_layer_authentication">2-Layer Authentication</string>
    <string name="_safemoon">Safemoon</string>
    <string name="_safemoon_">(SAFEMOON)</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort">Abort</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="acknowledgment_confirm_button_text">I Understand</string>
    <string name="acknowledgment_confirm_content_line_1">Your Recovery Phrase and Private Key allows you to recover your wallet.</string>
    <string name="acknowledgment_confirm_content_line_2">Never give your Recovery Phrase or Private Key to anyone that you do not know.</string>
    <string name="acknowledgment_confirm_content_line_3">It is your responsibility to keep your Recovery Phrase and Private Key secure to avoid loss of funds.</string>
    <string name="acknowledgment_confirm_title">Acknowledgment</string>
    <string name="action_close">Close</string>
    <string name="action_continue">Continue</string>
    <string name="action_delete">Delete</string>
    <string name="action_exit">Exit</string>
    <string name="action_here">here.</string>
    <string name="action_no">No</string>
    <string name="action_ok">Ok</string>
    <string name="action_save">Save</string>
    <string name="action_yes">Yes</string>
    <string name="add">Add</string>
    <string name="add_contact_screen_title">Add Contact</string>
    <string name="add_edit_chain_address">Chain Address</string>
    <string name="add_edit_contact_address">Wallet Address</string>
    <string name="add_edit_contact_name">Contact Name</string>
    <string name="add_edit_save_contact">Save Contact</string>
    <string name="add_new_coins_screen_title">Add Coins</string>
    <string name="add_new_tokens_empty">No tokens found</string>
    <string name="add_new_tokens_item_name">%1$s (%2$s)</string>
    <string name="add_new_tokens_screen_title">Add tokens</string>
    <string name="add_new_tokens_search">Search</string>
    <string name="akt_activity_login_txt">Login</string>
    <string name="akt_activity_or_txt">Or</string>
    <string name="akt_activity_register_txt">Register</string>
    <string name="akt_auth_with_bio">Two Layer Authentication</string>
    <string name="akt_by_proceeding_tc">By proceeding you agree with Terms &amp; Conditions</string>
    <string name="akt_change_password_dialog_success_content">Credentials changed successfully</string>
    <string name="akt_connection_error_message">Unable to connect to server</string>
    <string name="akt_err_name_cant_be_same_master_wallet">Names can\'t be the same Primary Wallet</string>
    <string name="akt_error_answer_questions_message">The answers are not correct!</string>
    <string name="akt_error_cannot_get_questions_message">Can\'t get the questions!</string>
    <string name="akt_error_cannot_register_new_key_message">Can\'t register a new account key!</string>
    <string name="akt_error_change_email_message">Oops, we can’t change the email this time. Please try again!</string>
    <string name="akt_error_change_password_message">Change credentials fail. Please try again!</string>
    <string name="akt_error_email_already_exist_message">Email already exists!</string>
    <string name="akt_error_email_empty_message">Email can\'t be blank!</string>
    <string name="akt_error_email_not_found_message">Oops, we didn\'t find this email in the system.</string>
    <string name="akt_error_invalid_credentials_message">Invalid credentials!</string>
    <string name="akt_error_invalid_email_format_message">Email is incorrect format!</string>
    <string name="akt_error_password_error_message">Please choose a different username.</string>
    <string name="akt_error_verify_code_empty_message">Verify code can\'t be blank!</string>
    <string name="akt_existing_wallets_confirm">I’ve copied over my wallet information</string>
    <string name="akt_existing_wallets_header">Wallets on this device</string>
    <string name="akt_existing_wallets_item_private_key">Private Key</string>
    <string name="akt_existing_wallets_item_private_key_notice">Your Private Key is hidden for security purposes. Never give your Private Key to anyone.</string>
    <string name="akt_existing_wallets_item_recovery_phrase">Recovery Phrase</string>
    <string name="akt_existing_wallets_item_recovery_phrase_notice">Your Recovery Phrase is hidden for security purposes. Never give your Recovery Phrase to anyone.</string>
    <string name="akt_existing_wallets_mnemonic_dialog_content">Your Recovery Phrase(s) and Private Key(s) allows you to recover your wallet.\10\10Never give your Recovery Phrase or Private Key to anyone.\10\10It is your responsibility to keep your Recovery Phrase(s) and Private Key(s) secure to avoid loss of funds.</string>
    <string name="akt_existing_wallets_notice_content">These wallets will be added to your new Orbital Shield Login. Please take the time to save your Recovery Phrase(s) and Private Key(s) information and store it offline.</string>
    <string name="akt_existing_wallets_on_login_confirm">Would you like to add these wallets to your Orbital Shield Login?</string>
    <string name="akt_existing_wallets_on_login_header">We have detected additional wallets on this device</string>
    <string name="akt_existing_wallets_on_login_noted">*Note - You can import them later with your Recovery Phrase or Private Key</string>
    <string name="akt_existing_wallets_on_login_notice_content">If you choose, these wallets will be added to your new Orbital Shield Login. Please take the time to save your Recovery Phrase(s) and Private Key(s) information and store it offline.</string>
    <string name="akt_existing_wallets_title">Existing Wallets</string>
    <string name="akt_get_email_change_email_address_label_title">Enter new email address</string>
    <string name="akt_get_email_email_address_label_title">Email Address</string>
    <string name="akt_get_email_sent_dialog_title">Email Sent</string>
    <string name="akt_get_email_text_hint">Enter Email</string>
    <string name="akt_get_email_verify_notice">After pressing continue, please check this email address for your verification code.</string>
    <string name="akt_import_wallet_option_back_label">Proceed without importing</string>
    <string name="akt_login_and_import_existing_wallets_confirm_dialog_content">Please confirm that you would like the existing wallets on this device to be added to your Orbital Shield Login.</string>
    <string name="akt_login_and_import_existing_wallets_confirm_dialog_header">Import Wallets</string>
    <string name="akt_register_guide_content_01">To begin you will need to create an Orbital Shield Login. This will be your new Username and Password for the wallet moving forward.</string>
    <string name="akt_register_guide_content_02">Don’t worry! Any wallets currently loaded on this device will still be accessible when finished.</string>
    <string name="akt_register_guide_content_03">You will also have the opportunity to view and record your Recovery Phrase(s) and Private Key(s) for your additional safety and security.</string>
    <string name="akt_register_guide_header">Will this erase the wallets I had loaded already?</string>
    <string name="akt_register_guide_login_notice">I have already created an Orbital \10Shield Login on another device</string>
    <string name="akt_register_guide_register_button">Register Account</string>
    <string name="akt_register_guide_title">Welcome to the SafeMoon Orbital Shield upgrade!</string>
    <string name="description">Description</string>
    <string name="dialog_alert_slip_desc">You are swapping a token with unique tokenomics, which means this contract requires a specialized tax or fee on every transaction.\10\10This is because SafeMoon taxes a 10% fee on each transaction:\10• 4% fee = Redistributed to all existing holders\10• 3% fee = Added liquidity\10• 2% fee = Tokens burned\10• 1% fee = Added to Ecosystem Growth Fund\10</string>
    <string name="popup_menu_money_bag_menu_bag_button">Bag Button</string>
    <string name="popup_menu_money_bag_menu_percentage_balance">Percentage of balance</string>
    <string name="popup_menu_money_bag_menu_percentage_traditional">Traditional Percentage Button</string>
    <string name="popup_menu_money_bag_menu_title">Toggle Button:</string>
    <string name="properties">Properties</string>
    <string name="source">Source:</string>
    <string name="swap_best_apply">Apply Best Value</string>
    <string name="swap_best_cancel">Cancel Transaction</string>
    <string name="swap_find_best_max_value_desc1">We are searching for the best possible price for your transaction’s success. Please remain patient while we search.</string>
    <string name="swap_find_best_max_value_desc2">Please note: in some cases this can take up to a few minutes. If you would like to cancel and start over with a different amount, you can do so by clicking the cancel button below.</string>
    <string name="swap_find_best_max_value_desc3">Why does this happen?</string>
    <string name="swap_find_best_max_value_desc4">Max amount:We will calculate the maximum amount of balance we can swap while still taking into consideration the gas fees required to ensure success of the transaction.</string>
    <string name="swap_find_best_max_value_desc5">Minimal gas reserved:In other cases, you may be cutting it close on the gas you have reserved for this transaction. So we are working hard to find a successful path to confirmation for this transaction given the low reserves.</string>
    <string name="swap_find_best_max_value_title">Finding Best Max Value</string>
    <string name="view_choose_stats_cmc_title">CMC stats</string>
    <string name="view_choose_stats_header_title">Choose Either</string>
    <string name="view_choose_stats_swap_title">SWAP stats</string>
</resources>