<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <include android:id="@+id/toolbar" layout="@layout/simple_transparent_toolbar_with_title"/>
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:fillViewport="true" android:overScrollMode="never" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:paddingLeft="@dimen/akt_default_margin_horizontal" android:paddingRight="@dimen/akt_default_margin_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/akt_default_margin_horizontal">
            <TextView android:textSize="@dimen/_16ssp" android:textColor="@color/akt_register_guide_title" android:layout_gravity="center" android:id="@+id/tvTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_50sdp" android:text="@string/akt_register_guide_title" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/gotham_bold" android:textAlignment="center"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/tvFirstContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/akt_register_guide_content_01" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="center"/>
            <View android:background="@color/akt_edit_text_hint" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/_20sdp"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/akt_register_guide_title" android:layout_gravity="center" android:id="@+id/tvHeader" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/akt_register_guide_header" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/gotham_bold" android:textAlignment="center"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/tvSecondContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/akt_register_guide_content_02" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="center"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/tvThirdContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/akt_register_guide_content_03" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="center"/>
            <com.google.android.material.button.MaterialButton android:id="@+id/btnContinue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_24sdp" android:text="@string/akt_register_guide_register_button" app:backgroundTint="@color/akt_button_active" style="@style/AktActiveButton"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/tvLoginNotice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_32sdp" android:text="@string/akt_register_guide_login_notice" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="center"/>
            <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/akt_sign_in_wipe" android:layout_gravity="center" android:id="@+id/tvLogin" android:padding="@dimen/_5sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/akt_activity_login_txt" android:fontFamily="@font/gotham_bold" android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
