<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY" android:adjustViewBounds="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <include android:id="@+id/toolbar" layout="@layout/simple_transparent_toolbar_with_title"/>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout android:orientation="vertical" android:id="@+id/content_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/akt_default_margin_horizontal" android:layout_marginRight="@dimen/akt_default_margin_horizontal" android:layout_marginHorizontal="@dimen/akt_default_margin_horizontal">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@+id/img_logo" android:layout_width="@dimen/_75sdp" android:layout_height="@dimen/_75sdp" android:layout_marginTop="@dimen/_26sdp" android:src="@drawable/ic_akt_wallet_vector"/>
            <TextView android:textSize="@dimen/_16ssp" android:textColor="@color/akt_register_guide_title" android:gravity="center" android:layout_gravity="center" android:id="@+id/tvExistingWalletsHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_24sdp" android:text="@string/akt_existing_wallets_header" android:fontFamily="@font/gotham_bold"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/tvNoticeContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/akt_existing_wallets_notice_content" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="center"/>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/contentWrapper" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" app:dividerPadding="@dimen/_16sdp" app:showDividers="middle"/>
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/_11ssp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/chkTermsAgree" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:button="@null" android:text="@string/akt_existing_wallets_confirm" android:drawablePadding="@dimen/_8sdp" android:drawableStart="@drawable/large_checkbox" android:fontFamily="@font/proxima_nova_regular"/>
            <com.google.android.material.button.MaterialButton android:id="@+id/btnContinue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:layout_marginBottom="@dimen/_32sdp" android:text="@string/action_continue" style="@style/AktActiveButton"/>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@+id/tvLoginConfirm" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/akt_existing_wallets_on_login_confirm" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_semi_bold" android:textAlignment="textStart"/>
            <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/white" android:id="@+id/tvLoginNote" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_11sdp" android:text="@string/akt_existing_wallets_on_login_noted" android:lineSpacingExtra="@dimen/_3ssp" android:fontFamily="@font/proxima_nova_bold" android:textAlignment="textStart"/>
            <com.google.android.material.button.MaterialButton android:id="@+id/btnYes" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:text="@string/action_yes" style="@style/AktActiveButton"/>
            <com.google.android.material.button.MaterialButton android:id="@+id/btnNo" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:layout_marginBottom="@dimen/_32sdp" android:text="@string/action_no" style="@style/AktActiveButton"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
