<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingLeft="@dimen/_20sdp" android:paddingRight="@dimen/_20sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/_20sdp">
    <com.google.android.material.card.MaterialCardView android:layout_width="@dimen/my_0dp" android:layout_height="wrap_content" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="@dimen/_12sdp" app:cardPreventCornerOverlap="true" app:cardUseCompatPadding="false" app:contentPadding="@dimen/_10sdp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="@dimen/_240sdp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView android:textSize="@dimen/_15ssp" android:textColor="@color/black" android:id="@+id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/swap_find_best_max_value_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <FrameLayout android:id="@+id/progressLoadingParent" android:layout_width="50dp" android:layout_height="50dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_title">
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@+id/progressLoading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" app:indicatorColor="@color/dark_green" app:srcCompat="@drawable/ic_magnifier" app:tint="@color/dark_green"/>
            </FrameLayout>
            <com.google.android.material.textview.MaterialTextView android:gravity="left" android:id="@+id/dialog_result1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/swap_find_best_max_value_desc1" app:layout_constraintTop_toBottomOf="@+id/progressLoadingParent"/>
            <com.google.android.material.textview.MaterialTextView android:gravity="left" android:id="@+id/dialog_result2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/swap_find_best_max_value_desc2" app:layout_constraintTop_toBottomOf="@+id/dialog_result1"/>
            <com.google.android.material.textview.MaterialTextView android:textColor="@color/black" android:gravity="left" android:id="@+id/dialog_result3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/swap_find_best_max_value_desc3" app:layout_constraintTop_toBottomOf="@+id/dialog_result2"/>
            <com.google.android.material.textview.MaterialTextView android:gravity="left" android:id="@+id/dialog_result4" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/swap_find_best_max_value_desc4" app:layout_constraintTop_toBottomOf="@+id/dialog_result3"/>
            <com.google.android.material.textview.MaterialTextView android:gravity="left" android:id="@+id/dialog_result5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/swap_find_best_max_value_desc5" app:layout_constraintTop_toBottomOf="@+id/dialog_result4"/>
            <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@+id/clkOk" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/swap_best_apply" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_result5" style="@style/Widget.MaterialComponents.Chip.Action"/>
            <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@+id/clkCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/swap_best_cancel" app:backgroundTint="@color/dark_grey" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialog_result5" style="@style/Widget.MaterialComponents.Chip.Action"/>
            <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="dialog_result1, dialog_result2, dialog_result3, dialog_result4, dialog_result5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
