<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center" android:orientation="vertical" android:paddingTop="@dimen/my_4dp" android:paddingBottom="@dimen/my_4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="@dimen/my_4dp">
    <androidx.appcompat.widget.AppCompatTextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:textColor="@color/t1" android:id="@+id/txtTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/popup_menu_money_bag_menu_title" style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <com.google.android.material.button.MaterialButton android:textColor="@color/t1" android:id="@+id/btnPercentageOfBalance" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/popup_menu_money_bag_menu_percentage_balance" style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <View android:background="@color/trans_color_shadow" android:layout_width="match_parent" android:layout_height="@dimen/_1sdp" android:layout_marginLeft="@dimen/_16sdp" android:layout_marginRight="@dimen/_16sdp" android:layout_marginHorizontal="@dimen/_16sdp"/>
    <com.google.android.material.button.MaterialButton android:textColor="@color/t1" android:id="@+id/btnPercentageOfTraditional" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/popup_menu_money_bag_menu_percentage_traditional" style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <View android:background="@color/trans_color_shadow" android:layout_width="match_parent" android:layout_height="@dimen/_1sdp" android:layout_marginLeft="@dimen/_16sdp" android:layout_marginRight="@dimen/_16sdp" android:layout_marginHorizontal="@dimen/_16sdp"/>
    <com.google.android.material.button.MaterialButton android:textColor="@color/t1" android:id="@+id/btnBag" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/popup_menu_money_bag_menu_bag_button" style="@style/Widget.MaterialComponents.Button.TextButton"/>
</androidx.appcompat.widget.LinearLayoutCompat>
