<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:layout_marginRight="15dp" android:layout_marginBottom="30dp">
            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/cal_swap"/>
            <View android:background="@color/t1" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="20dp"/>
            <TextView android:textSize="16dp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/description"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_alert_slip_desc"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <TextView android:textSize="16dp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/source"/>
                <TextView android:textColor="@color/green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="www.hrllo.com"/>
            </LinearLayout>
            <TextView android:textSize="16dp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/properties"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/propertyRecycle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp"/>
        </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>
