<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" android:backgroundTint="@color/p3" app:cardBackgroundColor="@color/white" app:cardCornerRadius="@dimen/cardCornerRadius" app:cardElevation="@dimen/_8sdp" app:cardUseCompatPadding="true" app:contentPaddingBottom="@dimen/_5sdp" app:contentPaddingLeft="@dimen/_8sdp" app:contentPaddingRight="@dimen/_8sdp" app:contentPaddingTop="@dimen/_5sdp" app:strokeColor="@color/trans_color_shadow" app:strokeWidth="1dp">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_16sdp" android:textStyle="bold" android:textColor="@color/t1" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="@dimen/my_30dp" android:layout_marginBottom="@dimen/my_8dp" android:text="@string/view_choose_stats_header_title"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_16sdp" android:textColor="@color/t1" android:gravity="center" android:layout_gravity="center" android:id="@+id/txtSwapStats" android:layout_width="match_parent" android:layout_height="@dimen/my_30dp" android:text="@string/view_choose_stats_swap_title"/>
        <View android:background="@color/trans_color_shadow" android:layout_width="match_parent" android:layout_height="@dimen/_1sdp"/>
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_16sdp" android:textColor="@color/t1" android:gravity="center" android:layout_gravity="center" android:id="@+id/txtCmcStats" android:layout_width="match_parent" android:layout_height="@dimen/my_30dp" android:text="@string/view_choose_stats_cmc_title"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>
